# tour-forecast

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
backend/: Dockerfile  README.md  alembic.ini  bd-districts.json  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/config/: factory.py
backend/api/config/environments/: __init__.py  development.py  production.py  staging.py
backend/api/database/cache/: repository.py
backend/api/database/districts/: repository.py
backend/api/database/forecasts/: repository.py  utils.py
backend/api/events/: startup.py
backend/api/migrations/: env.py
backend/api/migrations/versions/: 9b645ef6050f_db_v1.py
backend/api/models/database/: __init__.py  districts.py
backend/api/models/schemas/: __init__.py
backend/api/models/schemas/internals/: districts.py  forecasts.py
backend/api/models/schemas/request/: __init__.py
backend/api/models/schemas/response/: __init__.py  forecasts.py  misc.py
backend/api/security/dependencies/: clients.py
backend/api/utils/: docs.py  enums.py
backend/scripts/: export-dependencies.sh
backend/secrets/: development.json  production.json  staging.json
scraper/: Dockerfile  main.py  pyproject.toml  requirements.txt  scrapy.cfg
scraper/forecast/: items.py  middlewares.py  pipelines.py  settings.py
scraper/forecast/spiders/: meteo.py
