[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for tour forecast app"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.104.0"}
python-decouple = "^3.8"
pydash = "^7.0.6"
influxdb-client = "^1.38.0"
pandas = "2.0.3"
aioredis = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
ruff = "^0.1.1"

[tool.black]
line-length = 140
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.flake8]
max-line-length = 140
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 140
skip_gitignore = true

[tool.ruff]
line-length = 140
exclude = [".git", "__pycache__", "dist"]
target-version = "py39"
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
